--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     h1 {
       color: #d63384;
     }
-    form {
-      margin-top: 2rem;
-    }
     input, button {
       padding: 0.7rem;
       margin: 0.5rem;
@@ -92,34 +89,28 @@
   </div>
 
   <script>
-    // Dados de convidados
     let convidados = JSON.parse(localStorage.getItem('convidados')) || {};
 
-    // Função de confirmação de presença
     function confirmarPresenca(nome) {
-      const quantidade = convidados[nome]; // Obtém a quantidade de acompanhantes do convidado
+      const quantidade = convidados[nome];
       const convidadosConfirmados = JSON.parse(localStorage.getItem('confirmados')) || {};
 
       if (!convidadosConfirmados[nome]) {
-        // Se ainda não foi confirmado, marca como confirmado
         convidadosConfirmados[nome] = true;
         localStorage.setItem('confirmados', JSON.stringify(convidadosConfirmados));
-
-        // Mostrar mensagem de sucesso
         alert(`Obrigado, ${nome}! Você confirmou sua presença com ${quantidade} acompanhante(s).`);
       } else {
         alert(`${nome}, você já confirmou sua presença.`);
       }
     }
 
-    // Atualizar lista de convidados
     function atualizarLista() {
       const lista = document.getElementById('lista-convidados');
       lista.innerHTML = '';
       for (let nome in convidados) {
         const div = document.createElement('div');
         const confirmado = JSON.parse(localStorage.getItem('confirmados')) || {};
-        const presençaConfirmada = confirmado[nome] ? '✔️' : '❌'; // Exibe check verde se confirmado
+        const presençaConfirmada = confirmado[nome] ? '✔️' : '❌';
         div.className = 'lista-item';
         div.innerHTML = `
           <span class="nome">${nome} - ${convidados[nome]} pessoa(s) - ${presençaConfirmada}</span>
