--- a/index.html
+++ b/index.html
@@ -23,25 +23,6 @@
     h1 {
       color: #d63384;
     }
-    input, button {
-      padding: 0.7rem;
-      margin: 0.5rem;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      width: 80%;
-    }
-    input {
-      text-align: center;
-    }
-    button {
-      background-color: #d63384;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #bf2c76;
-    }
     .lista {
       margin-top: 2rem;
     }
@@ -80,28 +61,22 @@
 <body>
   <div class="container">
     <h1>Confirmação de Presença 🎉</h1>
-    <form id="form-cadastro">
-      <input type="text" id="nome" placeholder="Nome do convidado" required autofocus>
-      <input type="number" id="quantidade" placeholder="Quantidade de acompanhantes" required min="0">
-      <button type="submit">Cadastrar</button>
-    </form>
     <div class="lista" id="lista-convidados"></div>
   </div>
 
   <script>
     let convidados = JSON.parse(localStorage.getItem('convidados')) || {};
+    let confirmados = JSON.parse(localStorage.getItem('confirmados')) || {};
 
     function confirmarPresenca(nome) {
-      const quantidade = convidados[nome];
-      const convidadosConfirmados = JSON.parse(localStorage.getItem('confirmados')) || {};
-
-      if (!convidadosConfirmados[nome]) {
-        convidadosConfirmados[nome] = true;
-        localStorage.setItem('confirmados', JSON.stringify(convidadosConfirmados));
-        alert(`Obrigado, ${nome}! Você confirmou sua presença com ${quantidade} acompanhante(s).`);
+      if (!confirmados[nome]) {
+        confirmados[nome] = true;
+        localStorage.setItem('confirmados', JSON.stringify(confirmados));
+        alert(`Obrigado, ${nome}! Você confirmou sua presença.`);
       } else {
         alert(`${nome}, você já confirmou sua presença.`);
       }
+      atualizarLista();
     }
 
     function atualizarLista() {
@@ -109,8 +84,7 @@
       lista.innerHTML = '';
       for (let nome in convidados) {
         const div = document.createElement('div');
-        const confirmado = JSON.parse(localStorage.getItem('confirmados')) || {};
-        const presençaConfirmada = confirmado[nome] ? '✔️' : '❌';
+        const presençaConfirmada = confirmados[nome] ? '✔️' : '❌';
         div.className = 'lista-item';
         div.innerHTML = `
           <span class="nome">${nome} - ${convidados[nome]} pessoa(s) - ${presençaConfirmada}</span>
