--- a/index.html
+++ b/index.html
@@ -2,123 +2,62 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Confirmação de Presença - Festa da Isadora</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Confirmação de Presença - Aniversário da Isadora</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       background: #fff0f5;
       color: #333;
       text-align: center;
       padding: 2rem;
     }
     .container {
-      max-width: 500px;
-      margin: auto;
       background: #ffe6f0;
       border-radius: 20px;
       padding: 2rem;
+      max-width: 600px;
+      margin: auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h1 {
       color: #d63384;
     }
-    input, button {
-      padding: 0.7rem;
-      margin: 0.5rem 0;
-      width: 80%;
-      border-radius: 10px;
-      border: 1px solid #ccc;
+    p.descricao {
+      font-size: 1.1rem;
+      margin-top: 0.5rem;
+      color: #555;
     }
-    input {
-      text-align: center;
+    .buttons {
+      margin-top: 2rem;
     }
-    button {
+    .buttons button {
       background-color: #d63384;
       color: white;
       border: none;
+      padding: 0.8rem 1.5rem;
+      margin: 0.5rem;
+      border-radius: 8px;
       cursor: pointer;
+      font-size: 1rem;
     }
-    button:hover {
-      background-color: #bf2c76;
-    }
-    .mensagem {
-      margin-top: 1rem;
-      font-weight: bold;
-      color: green;
-    }
-    .info-evento {
-      margin-top: 2rem;
-      font-size: 0.95rem;
-      color: #444;
-    }
-    .link-cadastro {
-      margin-top: 2rem;
-      display: inline-block;
-      font-size: 0.9rem;
-      color: #555;
-      text-decoration: underline;
-      cursor: pointer;
+    .buttons button:hover {
+      background-color: #c02574;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Confirme sua presença 🎉</h1>
-    <p>Digite seu nome exatamente como foi cadastrado:</p>
-    <input type="text" id="nome" placeholder="Seu nome" autofocus />
-    <button onclick="confirmarPresenca()" id="btn-confirmar">Confirmar Presença</button>
-    <p id="mensagem" class="mensagem"></p>
-    <div class="info-evento" id="info-evento" style="display: none;">
-      📍 <strong>Local:</strong> Salão Festas Encanto<br>
-      📅 <strong>Data:</strong> 12/05/2025<br>
-      ⏰ <strong>Horário:</strong> 16h00
+    <h1>Você está convidado! 🎉</h1>
+    <p class="descricao">
+      É com muita alegria que convidamos você para o aniversário de 15 anos da Isadora!<br>
+      O evento será no dia <strong>28 de junho de 2025</strong>.<br>
+      Por favor, confirme sua presença.
+    </p>
+    <div class="buttons">
+      <button onclick="window.location.href='confirmar.html'">Confirmar Presença</button>
+      <button onclick="window.location.href='login.html'">Cadastrar Convidado</button>
     </div>
-    <div class="link-cadastro" onclick="window.location.href='login.html'">Cadastrar convidado</div>
   </div>
-
-  <script>
-    const nomeInput = document.getElementById("nome");
-    const mensagem = document.getElementById("mensagem");
-    const btnConfirmar = document.getElementById("btn-confirmar");
-    const infoEvento = document.getElementById("info-evento");
-
-    let convidados = JSON.parse(localStorage.getItem('convidados')) || {};
-    let confirmados = JSON.parse(localStorage.getItem('confirmados')) || [];
-
-    function confirmarPresenca() {
-      const nome = nomeInput.value.trim();
-      if (!nome) return;
-
-      if (convidados[nome]) {
-        if (!confirmados.includes(nome)) {
-          confirmados.push(nome);
-          localStorage.setItem('confirmados', JSON.stringify(confirmados));
-          mensagem.textContent = `Obrigado, ${nome}! Sua presença foi confirmada.`;
-        } else {
-          mensagem.textContent = `Você já confirmou sua presença, ${nome}.`;
-        }
-        infoEvento.style.display = 'block';
-      } else {
-        mensagem.textContent = "Nome não encontrado. Verifique se foi digitado corretamente.";
-        infoEvento.style.display = 'none';
-      }
-
-      nomeInput.value = "";
-      nomeInput.focus();
-    }
-
-    nomeInput.addEventListener("keydown", function(event) {
-      if (event.key === "Enter") {
-        confirmarPresenca();
-      }
-    });
-
-    btnConfirmar.addEventListener("keydown", function(event) {
-      if (event.key === "Enter") {
-        confirmarPresenca();
-      }
-    });
-  </script>
 </body>
 </html>
